fixed z-index

--- a/@libraries/blipjs/main.css
+++ b/@libraries/blipjs/main.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
-    --primary-hue: 0;
+    --primary-hue: 250;
     --primary-saturation: 80%;
     --primary-lightness: 59%;
     --primary: hsl(var(--primary-hue), var(--primary-saturation), var(--primary-lightness));
     --foreground: hsl(0, 0%, 100%);
     --background-hue: 200;
-    --background-saturation: 15%;
-    --background-lightness: 7%;
+    --background-saturation: 26%;
+    --background-lightness: 10%;
+
     --background: hsl(var(--background-hue), var(--background-saturation), var(--background-lightness));
     --background-lighter: hsl(var(--background-hue), var(--background-saturation), calc(var(--background-lightness) + 6%));
     --border-radius: 0px;
@@ -53,8 +54,9 @@ main>* {
     padding-top: 150px;
 }
 
-main>*:not(.landing) {
+main>section:not(.landing) {
     z-index: 3;
+    position: relative;
 }
 
 h1 {
@@ -280,7 +282,7 @@ button.outline.secondary:hover {
     background-size: cover;
     background-repeat: no-repeat;
     margin-bottom: -50vh;
-    z-index: -1;
+    /* z-index: -1; */
 }
 
 .landing::before {
@@ -646,6 +648,7 @@ dropdown dropdown-body dropdown-item:hover {
     background-color: rgba(0, 0, 0, 0);
     pointer-events: none;
     transition: background 500ms;
+    z-index: 4;
 }
 
 .popup.open {
